# ThermalCanary

./: .gitignore  LICENSE  README.md  config.example.yaml  coverage-badge.json  install.sh  make_icon.py  monitor.py  mutation-badge.json  pyproject.toml  requirements.txt  sysgauge.py  uninstall.sh
.githooks/: pre-commit
.github/workflows/: ci.yml
.serena/: project.yml
packaging/aur/: .SRCINFO  PKGBUILD
packaging/flatpak/: io.github.ibasaw.ThermalCanary.desktop  io.github.ibasaw.ThermalCanary.metainfo.xml  io.github.ibasaw.ThermalCanary.yml
sysgauge/: __main__.py  app.py  config.py  gauge.py  sensor.py  settings.py
tests/: conftest.py  test_app.py  test_app_extra.py  test_app_extra2.py  test_config.py  test_first_run.py  test_first_run_extra.py  test_gauge.py  test_gpu_sysfs.py  test_integration.py  test_screens.py  test_sensor.py  test_sensor_amd.py  test_sensor_intel.py  test_sensor_nvidia.py  test_sensor_select.py  test_settings_dpms.py  test_settings_extra.py  test_setup.py  test_tray.py
thermalcanary/: __init__.py  __main__.py  _gpu_sysfs.py  _setup.py  amd.py  app.py  config.py  first_run.py  gauge.py  intel.py  nvidia.py  screens.py  sensor.py  sensor_select.py  settings.py  tray.py
tools/: fake_gpu.py
