[project]
name = "thermalcanary"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "PyQt6>=6.5.0",
    "psutil>=5.9.0",
    "nvidia-ml-py>=12.0.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-qt>=4.4",
    "pytest-mock>=3.14",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
qt_api = "pyqt6"
addopts = "--cov=thermalcanary --cov-report=term-missing"

[tool.coverage.run]
omit = ["thermalcanary/__main__.py"]
