[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "thermalcanary"
version = "1.1.10"
description = "GPU and CPU thermal gauges for Linux — six circular arc gauges on a dedicated monitor"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PyQt6>=6.5.0",
    "psutil>=5.9.0",
    "nvidia-ml-py>=12.0.0",
    "PyYAML>=6.0",
]

[project.scripts]
thermalcanary = "thermalcanary.app:main"
thermalcanary-setup = "thermalcanary._setup:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-qt>=4.4",
    "pytest-mock>=3.14",
    "pytest-cov>=5.0",
    "bandit>=1.7",
]

[tool.pytest.ini_options]
qt_api = "pyqt6"
addopts = "--cov=thermalcanary --cov-report=term-missing"
norecursedirs = ["mutants", ".venv", "node_modules", "__pycache__", ".git"]

[tool.coverage.run]
omit = ["thermalcanary/__main__.py"]

[dependency-groups]
dev = [
    "mutmut>=3.5.0",
]

[tool.mutmut]
paths_to_mutate = [
    "thermalcanary/config.py",
    "thermalcanary/sensor.py",
    "thermalcanary/gauge.py",
    "thermalcanary/screens.py",
    "thermalcanary/amd.py",
    "thermalcanary/intel.py",
    "thermalcanary/nvidia.py",
    "thermalcanary/_gpu_sysfs.py",
    "thermalcanary/tray.py",
    "thermalcanary/sensor_select.py",
]
runner = "python -m pytest -x -q --no-header --no-cov"
